[gd_scene load_steps=11 format=3 uid="uid://btn6pv7dgilvg"]

[ext_resource type="Script" uid="uid://bd07h7odhag8f" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://ciw002d7xvba7" path="res://scenes/player.tscn" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://cmhjwjsxyht7s" path="res://scenes/debrisUfo.tscn" id="2_gee14"]
[ext_resource type="Script" uid="uid://2anuui80qa1v" path="res://scripts/hud.gd" id="4_lbhrr"]
[ext_resource type="FontFile" uid="uid://da0jonpbu6wii" path="res://assets/fonts/Pixeled.ttf" id="5_gee14"]
[ext_resource type="Script" uid="uid://bs0mr75jn2v7u" path="res://scripts/game_camera.gd" id="6_p57ef"]
[ext_resource type="VideoStream" uid="uid://dn8uwqgghlvhn" path="res://assets/bg_video/star_burst_2.ogv" id="7_u5sy4"]
[ext_resource type="AudioStream" uid="uid://d34h7btsjdy6f" path="res://assets/menu/2019-08-25_-_8bit-Smooth_Presentation_-_David_Fesliyan.mp3" id="8_gee14"]
[ext_resource type="AudioStream" uid="uid://ciio5u4pqr8a4" path="res://assets/menu/game-over-arcade-6435.mp3" id="9_0tnpc"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_u5sy4"]

[node name="Game" type="Node2D" groups=["game_camera", "game_root"]]
script = ExtResource("1_lnu2h")
enemy_speed = 200.0
max_enemies_on_screen = 20
debris_ufo_scene = ExtResource("2_gee14")

[node name="Player" parent="." groups=["game_camera"] instance=ExtResource("1_yqjtg")]
position = Vector2(800, 300)

[node name="StarTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("4_lbhrr")

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -61.0
offset_right = 169.0
offset_bottom = 2.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0235294, 0.839216, 0.309804, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 18
text = "Score: 0"
metadata/_edit_use_anchors_ = true

[node name="LivesLabel" type="Label" parent="HUD" groups=["game_camera"]]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -61.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 18
text = "Lives: 3"
metadata/_edit_use_anchors_ = true

[node name="GameOverLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -306.0
offset_right = 242.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 55
text = "GAME OVER"

[node name="HighScoreLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -958.0
offset_top = 587.0
offset_right = -680.0
offset_bottom = 650.0
grow_horizontal = 0
pivot_offset = Vector2(16, 8)
theme_override_colors/font_color = Color(0.0235294, 0.839216, 0.309804, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 18
text = "Highest Score: "
horizontal_alignment = 2

[node name="LevelLabel" type="Label" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -282.0
offset_top = -61.0
offset_right = -136.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0235294, 0.839216, 0.309804, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 18

[node name="DebrisTimer" type="Timer" parent="."]
wait_time = 1.6
autostart = true

[node name="GameCamera" type="Camera2D" parent="." groups=["game_camera", "game_root"]]
position = Vector2(571, 322)
script = ExtResource("6_p57ef")

[node name="VideoLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="VideoRoot" type="Control" parent="VideoLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoBG" type="VideoStreamPlayer" parent="VideoLayer/VideoRoot"]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stream = ExtResource("7_u5sy4")
volume_db = -80.0
autoplay = true
expand = true
loop = true
buffering_msec = 1000

[node name="MenuLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 100

[node name="MainMenu" type="Control" parent="MenuLayer"]
process_mode = 2
custom_minimum_size = Vector2(360, 220)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -98.0
offset_right = 180.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Menu" type="Label" parent="MenuLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.796078, 0.243137, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxLine_u5sy4")
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="MenuLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.796078, 0.243137, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 25
text = " - START -"

[node name="QuitButton" type="Button" parent="MenuLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.796078, 0.243137, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 27
text = "- QUIT -"

[node name="ResumeButton" type="Button" parent="MenuLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.796078, 0.243137, 1)
theme_override_fonts/font = ExtResource("5_gee14")
theme_override_font_sizes/font_size = 27
text = "- RESUME -"

[node name="MenuMusic" type="AudioStreamPlayer" parent="MenuLayer"]
process_mode = 3
stream = ExtResource("8_gee14")

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_0tnpc")
volume_db = 0.1

[connection signal="game_overed" from="Player" to="." method="_on_player_game_overed"]
[connection signal="pressed" from="MenuLayer/MainMenu/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuLayer/MainMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MenuLayer/MainMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
